Fix misalignemnt in landing page intro spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -155,6 +155,7 @@ main {
 #intro {
     margin-left: 6rem;
     margin-right: 1rem;
+    align-items: start;
 }
 
 #intro h1 {
